# reqchan-rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  request.rs  response.rs
tests/: multi_threaded_one_requester_one_responder.rs  multi_threaded_one_requester_two_responders.rs  multi_threaded_single_pair.rs  single_threaded.rs
