[package]
name = "reqchan"
version = "0.5.4"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]
description = "A simple Request->Response channel"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/reqchan/"
homepage = "https://github.com/Elzair/reqchan-rs"
repository = "https://github.com/Elzair/reqchan-rs"

[dependencies]
