[package]
name = "reqchan"
version = "0.5.7"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]
description = "This is a channel for requesting and receiving data. Each channel has only one requesting end, but it can have multiple responding ends. It is useful for implementing work sharing. The two ends of the channel are asynchronous with respect to each other, so it is kinda nonblocking. However, if multiple responding ends try to respond to the same request, only one will succeed; the rest will return errors."
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/reqchan/"
homepage = "https://github.com/Elzair/reqchan-rs"
repository = "https://github.com/Elzair/reqchan-rs"
keywords = ["chan", "channel", "requests"]
categories = ["asynchronous", "data-structures"]

[dependencies]
