[package]
name = "reqchan"
version = "0.6.0"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]
description = "This is a channel for requesting and receiving data."
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/reqchan/"
homepage = "https://github.com/Elzair/reqchan-rs"
repository = "https://github.com/Elzair/reqchan-rs"
keywords = ["chan", "channel", "requests"]
categories = ["asynchronous", "data-structures"]

[badges]
travis-ci = { repository = "Elzair/reqchan-rs" }
appveyor = { repository = "Elzair/reqchan-rs" }

[dependencies]
